2008-01-24	Mike Massonnet <mmassonnet@gmail.com>

	* panel-plugin/clipman.c(clipman_plugin_set_size): Scale pixbuf.

2008-01-24	Mike Massonnet <mmassonnet@gmail.com>

	* panel-plugin/Makefile.am: Add stuff in INCLUDES
	* panel-plugin/clipman.c: Count padding of 2 (as done by other panel plugins)
	  and correct the double xthickness to x/y.

2008-01-14	Mike Massonnet <mmassonnet@gmail.com>

	* .gitignore: Add *.swp.
	* TODO: out of ideas. Deleted.
	* po/: update french translation, fix changelog.

2008-01-14	Mike Massonnet <mmassonnet@gmail.com>

	* Add .gitignore files.

2008-01-14	Mike Massonnet <mmassonnet@gmail.com>

	* panel-plugin/Makefile.am,
	  panel-plugin/xfce4-popup-clipman.c,
	  panel-plugin/xfce4-popup-clipman.h,
	  panel-plugin/clipman.c: Add popup command.

2008-01-14	Mike Massonnet <mmassonnet@gmail.com>

	* panel-plugin/clipman.c(clipman_plugin_button_pressed),
	  panel-plugin/clipman.c(clipman_plugin_new),
	  panel-plugin/clipman.c(clipman_plugin_menu_popup):
	  Replace "button_press_event" against a "toggled" signal.

2008-01-14	Mike Massonnet <mmassonnet@gmail.com>

	* panel-plugin/clipman.c(clipman_plugin_load_data),
	  panel-plugin/clipman.c(clipman_plugin_save_data): Replace g_return_if_fail
	  with return since it wouldn't be a bug in the application, but a end-user
	  problem (file permission, ...).
	* panel-plugin/clipman.c(clipman_plugin_get_short_text): Replace the UTF-8
	  ellipsis with "...".
	* panel-plugin/clipman.c(clipman_plugin_menu_insert_clip),
	  panel-plugin/clipman.c(clipman_plugin_menu_item_activate),
	  panel-plugin/clipman.c(clipman_plugin_menu_item_pressed): Set a gobject data
	  with the pointer of the clip.  Remove the g_slist_nth_data() calls.

2008-01-09	Mike Massonnet <mmassonnet@gmail.com>

	* panel-plugin/clipman.h: Set save on exit by default.
	* panel-plugin/clipman.c: Three new functions _plugin_add_static/with_text,
	  _plugin_delete, where the GUI code fits better.  Remove _clips_add_static.