@@ -1,1 +1,1 @@
-This is a simple cliboard history for XFCE4 Panel
+This is a simple cliboard history for Xfce Panel
