@@ -1,27 +1,39 @@
+# $Id$
+
 INCLUDES =								\
 	-I$(top_srcdir)							\
+	-DG_LOG_DOMAIN=\"xfce4-clipman-plugin\"				\
 	-DPACKAGE_LOCALE_DIR=\"$(localedir)\"
 
-
-
-bin_PROGRAMS = xfce4-popup-clipman
+#
+# Clipman popup command
+#
+bin_PROGRAMS =								\
+	xfce4-popup-clipman
 
 xfce4_popup_clipman_SOURCES =						\
 	xfce4-popup-clipman.h						\
 	xfce4-popup-clipman.c
 
 xfce4_popup_clipman_CFLAGS =						\
-	@LIBX11_CFLAGS@							\
-	@GTK_CFLAGS@
+	$(LIBX11_CFLAGS)						\
+	$(GTK_CFLAGS)
 
 xfce4_popup_clipman_LDADD =						\
-	@LIBX11_LDFLAGS@						\
-	@GTK_LIBS@
+	$(LIBX11_LIBS)							\
+	$(GTK_LIBS)
 
+xfce4_popup_clipman_LDFLAGS =						\
+	$(LIBX11_LDFLAGS)
 
+#
+# Clipman plugin
+#
+plugindir =								\
+	$(libexecdir)/xfce4/panel-plugins
 
-plugindir = $(libexecdir)/xfce4/panel-plugins
-plugin_PROGRAMS = xfce4-clipman-plugin
+plugin_PROGRAMS =							\
+	xfce4-clipman-plugin
 
 xfce4_clipman_plugin_SOURCES =						\
 	clipman-dialogs.h						\
@@ -30,17 +42,19 @@ xfce4_clipman_plugin_SOURCES =						\
 	clipman.c
 
 xfce4_clipman_plugin_CFLAGS =						\
-	@LIBXFCE4PANEL_CFLAGS@						\
-	@LIBXFCE4UTIL_CFLAGS@						\
-	@LIBXFCEGUI4_CFLAGS@
+	$(LIBXFCE4PANEL_CFLAGS)						\
+	$(LIBXFCE4UTIL_CFLAGS)						\
+	$(LIBXFCEGUI4_CFLAGS)
 
 xfce4_clipman_plugin_LDADD =						\
-	@LIBXFCE4PANEL_LIBS@						\
-	@LIBXFCE4UTIL_LIBS@						\
-	@LIBXFCEGUI4_LIBS@
+	$(LIBXFCE4PANEL_LIBS)						\
+	$(LIBXFCE4UTIL_LIBS)						\
+	$(LIBXFCEGUI4_LIBS)
 
 
-
+#
+# Desktop file
+#
 desktop_in_in_files = clipman.desktop.in.in
 desktop_in_files = $(desktop_in_in_files:.desktop.in.in=.desktop.in)
 
