@@ -22,6 +22,7 @@
 #include <config.h>
 #endif
 
+#include <gdk/gdkx.h>
 #include <libxfce4util/libxfce4util.h>
 #include <libxfce4panel/xfce-panel-convenience.h>
 
