@@ -1,3 +1,9 @@
+2008-01-25  Nick Schermer <nick@xfce.org>
+	
+	* panel-plugin/clipman.c: Fix missing include.
+	* panel-plugin/Makefile.am: Some improvements.
+	* README: Small improvement.
+
 2008-01-24	Mike Massonnet <mmassonnet@gmail.com>
 
 	* panel-plugin/clipman.c(clipman_plugin_set_size): Scale pixbuf.
